Vlogs Ranking, videos coachmarks and localization

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -664,6 +664,7 @@
     <string name="guide.share_like_bookmark_tour">পোস্টটি লাইক করুন, শেয়ার করুন এবং বুকমার্ক করুন</string>
     <string name="guide.listen_tour">আর্টিকেলটি শুনতে এখানে ক্লিক করুন</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">আপনার পছন্দের মমভিলগসগুলি দেখুন |\n অংশগ্রহণ করুন সাপ্তাহিক মমভিলগস চ্যালেঞ্জে |</string>
 
     <string name="author_type.blogger">ব্লগার</string>
     <string name="author_type.editor">সম্পাদক</string>
