--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -758,6 +758,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="guide.share_like_bookmark_tour">Share, Bookmark and Love this post</string>
     <string name="guide.listen_tour">Click here to listen to this blog</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">તમારો પ્રિય મોમ વિ લોગ નિહાળો અને \nદર અઠવાડિયાના વિડીઓ  ચેલેન્જ માં ભાગ લો</string>
 
     <string name="author_type.blogger">બ્લોગર </string>
     <string name="author_type.editor">તંત્રી</string>
