--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -691,6 +691,7 @@
     <string name="guide.share_like_bookmark_tour">ഈ പോസ്റ്റ് ഷെയറും ബുക്ക് മാർക്കും ചെയ്ത് ഇഷ്ടപ്പെടൂ</string>
     <string name="guide.listen_tour">ഈ ബ്ലോഗ് കേൾക്കുവാനായി ഇവിടെ ക്ലിക് ചെയ്യൂ</string>
     <string name="guide.groups_tour">സപ്പോർട്ട് ഗ്രൂപുകളിൽ ചേരൂ. ചോദ്യങ്ങൾ പേരില്ലാതെയും പോസ്റ്റ് ചെയ്യാം. ഈ കൂട്ടായ്മയിൽ നിന്ന് അവയ്ക്കുള്ള മറുപടികളും വായിക്കാം </string>
+    <string name="guide.vlogs_tour">നിങ്ങളുടെ പ്രിയപ്പെട്ട അമ്മ വിലോഗുകൾ കാണുക.\n ആഴ്ച തോറുമുള്ള വീഡിയോ ചാലൻജുകളിൽ പങ്കെടുക്കുക.</string>
 
     <string name="author_type.blogger">ബ്ലോഗർ</string>
     <string name="author_type.editor">എഡിറ്റർ </string>
