--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -674,6 +674,7 @@
     <string name="guide.share_like_bookmark_tour">Share, Bookmark and Love this post</string>
     <string name="guide.listen_tour">Click here to listen to this blog</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">आपले आवडते मॉमव्हीलॉग्ज पहा.\n साप्ताहिक व्हिडिओ आव्हानांमध्ये भाग घ्या.</string>
 
     <string name="author_type.blogger">ब्लॉगर</string>
     <string name="author_type.editor">संपादक</string>
