--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -758,6 +758,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="guide.share_like_bookmark_tour">ਸ਼ੇਅਰ, ਬੁੱਕਮਾਰਕ ਅਤੇ ਇਸ ਪੋਸਟ ਨੂੰ ਪਿਆਰ ਕਰੋ</string>
     <string name="guide.listen_tour">ਇਸ ਬਲਾਗ ਨੂੰ ਸੁਣਨ ਲਈ ਇੱਥੇ ਕਲਿੱਕ ਕਰੋ</string>
     <string name="guide.groups_tour">ਸਪੋਰਟ ਗਰੁੱਪਾਂ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਵੋ ਪ੍ਰਸ਼ਨ ਪੁੱਛੋ( ਅਗਿਆਤ ਰਹਿ ਕੇ ਵੀ) ਅਤੇ ਕਮਿਊਨਿਟੀ ਤੋਂ ਉੱਤਰ ਪ੍ਰਾਪਤ ਕਰੋ</string>
+    <string name="guide.vlogs_tour"> ਆਪਣੀ ਮਨਪਸੰਦ ਮੋਮ ਵਲੌਗਸ ਵੇਖੋ।\n ਹਫਤਾਵਾਰੀ ਵੀਡੀਓ ਚੁਣੌਤੀਆਂ ਵਿੱਚ ਹਿੱਸਾ ਲਓ।</string>
 
     <string name="author_type.blogger">ਬਲੋਗਰ</string>
     <string name="author_type.editor">ਸੰਪਾਦਕ</string>
