--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -676,6 +676,7 @@
     <string name="guide.share_like_bookmark_tour">Share, Bookmark and Love this post</string>
     <string name="guide.listen_tour">Click here to listen to this blog</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">உங்களுக்கு பிடித்தமான மாம்  வ்லாக்ஸை பாருங்கள்.\n வாராவாரம் வீடியோ சவால்களில் பங்குபெருங்கள்.</string>
 
     <string name="author_type.blogger">பதிவர்</string>
     <string name="author_type.editor">ஆசிரியர்</string>
