--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -672,6 +672,7 @@
     <string name="guide.share_like_bookmark_tour">Share, Bookmark and Love this post</string>
     <string name="guide.listen_tour">Click here to listen to this blog</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">మీకు ఇష్టమైన మామ్ వీలాగ్ లను  చూడండి.\n ఆ వారపు వీడియో ఛాలెంజ్ లో పాల్గొనండి.</string>
 
     <string name="author_type.blogger">బ్లాగర్</string>
     <string name="author_type.editor">ఎడిటర్</string>
