--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -760,6 +760,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="guide.share_like_bookmark_tour">Share, Bookmark and Love this post</string>
     <string name="guide.listen_tour">Click here to listen to this blog</string>
     <string name="guide.groups_tour">Join Support Groups. Ask questions (even anonymously) \nand get answers from the community.</string>
+    <string name="guide.vlogs_tour">Watch your favourite Mom Vlogs. \nTake part in weekly video challenges.</string>
 
     <string name="author_type.blogger">BLOGGER</string>
     <string name="author_type.editor">EDITOR</string>
