Missing Translation + Vlogs not opening from users feed + article audio playing in bg

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1173,4 +1173,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="editor_saving">आपकी पोस्ट सेव हो रही है&#8230;</string>
     <string name="select_thumbnail">अपने व्लॉग के लिए एक थंबनेल का चुनाव करें</string>
     <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="write_something">कुछ लिखें</string>
 </resources>
