--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -1166,4 +1166,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="editor_saving">सेव्हिंग &#8230;</string>
     <string name="select_thumbnail">व्हिलॉग साठी छोटी प्रतिमा निवडा.</string>
     <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="write_something">काहीतरी लिहा.</string>
 </resources>
