--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1246,5 +1246,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="editor_saving">ਸੇਵ ਹੋ ਰਿਹਾ ਹੈ &#8230;</string>
     <string name="select_thumbnail">ਆਪਣੇ ਵਲੋਗ ਲਈ ਇੱਕ ਥੰਬਨੇਲ ਦੀ ਚੋਣ ਕਰੋ</string>
     <string name="audio_delay_msg">Playing your audio might take afew seconds</string>
+    <string name="write_something">ਕੁਝ ਲਿਖੋ</string>
 </resources>
 
