--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1155,9 +1155,14 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="not_working">Not Working</string>
     <string name="working">Working</string>
 
-    <string name="voise_post_group">Use your voice\nRecord your thoughts or ask a question in your voice</string>
-    <string name="poll_post_group">Create a poll\nGet community’s opinion on what matters to you</string>
-    <string name="blog_post_group">Write something\nAsk a question or share your thought</string>
+    <string name="voise_post_group">अपनी आवाज का इस्तेमाल करें\nअपने विचारों को रिकॉर्ड करें या अपनी आवाज़ में एक प्रश्न पूछें।
+
+</string>
+    <string name="poll_post_group">राय लें\nइस पर समुदाय की राय लें कि आपके लिए क्या मायने रखता है।
+
+u</string>
+    <string name="blog_post_group">कुछ लिखिए\nप्रश्न पूछें या अपने विचार साझा करें।
+</string>
 
     <string name="mom_vlog_banner_title">मॉम व्हिलॉग चॅलेंज अलर्ट</string>
     <string name="mom_vlog_banner_subtitle">और जीतें 10000 रुपए तक के पुरस्कार</string>
