string change in hindi

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1159,8 +1159,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
 </string>
     <string name="poll_post_group">राय लें\nइस पर समुदाय की राय लें कि आपके लिए क्या मायने रखता है।
-
-u</string>
+    </string>
     <string name="blog_post_group">कुछ लिखिए\nप्रश्न पूछें या अपने विचार साझा करें।
 </string>
 
