--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1303,5 +1303,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="select_thumbnail">Select a thumbnail for your vlog</string>
     <string name="audio_delay_msg">Please wait while your audio is loaded.</string>
     <string name="write_something">Write Something</string>
+    <string name="join_dialog_post">POST</string>
 </resources>
 
