--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -22,7 +22,7 @@
     <string name="locality_txt">किस जगह पर?</string>
     <string name="error_network">यह उपकरण नेटवर्क क्षेत्र से बाहर है</string>
     <string name="please_wait">कृपया इंतज़ार करें...</string>
-    <string name="groups_groups_myfeed">গग्रुप्स</string>
+    <string name="groups_groups_myfeed">ग्रुप्स</string>
 
     <string name="no_result_txt">कोई परिणाम नहीं मिला</string>
     <string name="went_wrong">कुछ गलत हो गया है </string>
