JIRA - Application and Submission date labels

--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -1216,4 +1216,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">എന്തെങ്കിലും എഴുതുക</string>
     <string name="join_dialog_post">പ്രസിദ്ധീകരിക്കുക</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
