--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -1297,4 +1297,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">કંઇક લખો</string>
     <string name="join_dialog_post">પ્રકાશિત કરો</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
