--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -1181,4 +1181,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">कुछ लिखें</string>
     <string name="join_dialog_post">प्रकाशित</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
