--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -1210,4 +1210,6 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">ಏನಾದರೂ ಬರೆಯಿರಿ</string>
     <string name="join_dialog_post">ಪ್ರಕಟಿಸು</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
