--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -1250,5 +1250,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">ਕੁਝ ਲਿਖੋ</string>
     <string name="join_dialog_post">ਪ੍ਰਕਾਸ਼ਿਤ ਕਰੋ</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
 
