--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1306,5 +1306,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="write_something">Write Something</string>
     <string name="join_dialog_post">POST</string>
     <string name="spell_check_error">We found a few errors in the article</string>
+    <string name="application_end_date">Application End Date</string>
+    <string name="submission_end_date">Submission End Date</string>
 </resources>
 
