initialize extraData in Topics Model class + incorrect bengali label

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">মম্স্প্রেস্সো</string>
     <string name="unknown_person">অজানা</string>
     <string name="resend_email">ইমেল পুনরায় পাঠান</string>
-    <string name="groups.other_groups">Oঅন্যান্য গ্রুপস </string>
+    <string name="groups.other_groups">অন্যান্য গ্রুপস </string>
     <string name="groups_enable_notification">নোটিফিকেশন সক্রিয় করুন </string>
 
     <string name="view_more_profile">view more</string>
