--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -336,7 +336,7 @@
 
     <string name="lang_specific.toolbar.title">ഭാഷകൾ</string>
 
-    <string name="lang_setting.stories_label">സ്റ്റോറീസ്</string>
+    <string name="lang_setting.stories_label">കഥകൾ</string>
 
     <string name="search.article_label">ലേഖനങ്ങൾ</string>
     <string name="search.author_label">ലേഖിക</string>
@@ -360,7 +360,7 @@
     <string name="myprofile.followers_label">പിന്തുടരുന്നവർ</string>
     <string name="myprofile.section.articles_label">ലേഖനങ്ങൾ</string>
     <string name="myprofile.section.short_story_label">100 വാക്ക് സ്റ്റോറി</string>
-    <string name="myprofile.section.videos_label">അമ്മമാരുടെ വിലോഗുകൾ</string>
+    <string name="myprofile.section.videos_label">അമ്മ വ്ളോഗുകൾ</string>
     <string name="myprofile.section.activity_label">പ്രവർത്തനം</string>
     <string name="myprofile.section.myranking_label">നിങ്ങളുടെ റാങ്കിങ്ങ്</string>
     <string name="myprofile.section.settings_label">സെറ്റിങ്‌സ്</string>
