text to speech crash and vlog title seemore

--- a/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-gu/strings.xml
@@ -68,6 +68,7 @@
     <!-- article details -->
     <string name="submit">સબમિટ </string>
     <string name="add_reply">અહીં ટાઇપ કરો </string>
+    <string name="article_play_notification_text">You are listening to this blog</string>
 
     <!-- Top Picks Detail Screen -->
     <string name="organised_by">Organized By</string>
