--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -66,6 +66,7 @@
     <!-- article details -->
     <string name="submit">सबमिट करा </string>
     <string name="add_reply">इथे टाईप करा </string>
+    <string name="article_play_notification_text">You are listening to this blog</string>
 
     <!-- Top Picks Detail Screen -->
     <string name="organised_by">आयोजक </string>
