--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -69,6 +69,7 @@
     <!-- article details -->
     <string name="submit">सबमिट करें </string>
     <string name="add_reply">यहाँ लिखें</string>
+    <string name="article_play_notification_text">You are listening to this blog</string>
 
     <!-- Top Picks Detail Screen -->
     <string name="organised_by">आयोजित किया गया</string>
