--- a/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-pa/strings.xml
@@ -68,6 +68,7 @@
     <!-- article details -->
     <string name="submit">ਜਮ੍ਹਾਂ ਕਰੋ</string>
     <string name="add_reply">ਇਥੇ ਟਾਈਪ ਕਰੋ</string>
+    <string name="article_play_notification_text">You are listening to this blog</string>
 
     <!-- Top Picks Detail Screen -->
     <string name="organised_by">Organized By</string>
