--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -68,6 +68,7 @@
     <!-- article details -->
     <string name="submit">சமர்ப்பிக்கவும்</string>
     <string name="add_reply">இங்கே டைப் செய்யவும்</string>
+    <string name="article_play_notification_text">You are listening to this blog</string>
 
     <!-- Top Picks Detail Screen -->
     <string name="organised_by">ஏற்பாடு செய்தது</string>
